# ankiflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/ankiflow/: __init__.py  cli.py  core.py  gui.py  main.py  style.css
