[project]
name = "ankiflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "gtts>=2.5.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
hello = "ankiflow:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
