[project]
name = "ankiflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.3.0",
    "ddgs>=9.10.0",
    "flet[all]>=0.21.0",
    "genanki>=0.13.1",
    "gtts>=2.5.4",
    "krdict-py>=3.0.2",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "typer>=0.21.0",
]

[project.scripts]
ankiflow = "ankiflow.cli:main"
ankiflow-gui = "ankiflow.gui:start_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
